<resources>
    <string name="app_name">Gemastik</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="username_or_email">Username or Email</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="selamat_datang_di_app_bantuan_id">Selamat Datang di\nApp Bantu.in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="create_new_account">Create New Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="selamat_datang_username">Selamat Datang,\nUsername</string>
    <string name="bantu_donasi">Bantu\nDonasi</string>
    <string name="bantu_belajar">Bantu\nBelajar</string>
    <string name="bantu_kerja">Bantu\nKerja</string>
    <string name="_62_85766689697">+62 85766689697</string>
    <string name="username_gmail_com">username@gmail.com</string>
    <string name="aktivitas_saya">Aktivitas Saya</string>
    <string name="belajar">Belajar</string>
    <string name="donasi">Donasi</string>
    <string name="kerja">Kerja</string>
    <string name="lowongan">Lowongan</string>
    <string name="kandidat">Kandidat</string>
    <string name="pengajuan_donasi_baru">Pengajuan Donasi Baru</string>
    <string name="judul_donasi">Judul Donasi</string>
    <string name="thumbnail_donasi">Thumbnail Donasi</string>
    <string name="deskripsi_donasi">Deskripsi Donasi</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="undang_teman">Undang Teman</string>
    <string name="pilih_bahasa">Pilih Bahasa</string>
    <string name="bantuan">Bantuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="ketentuan_layanan">Ketentuan Layanan</string>
    <string name="beri_kami_nilai">Beri Kami Nilai</string>
    <string name="logout">Logout</string>
    <string name="informasi_lainnya">Informasi Lainnya</string>
    <string name="tambahkan_foto_deskripsi">Tambahkan Foto Deskripsi</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="domisili_pendonasian">Domisili Pendonasian</string>
    <string name="bentuk_donasi">Bentuk Donasi</string>
    <string name="kirim_barang">Kirim Barang</string>
    <string name="transfer_uang">Transfer Uang</string>
    <string name="verifikasi_pengajuan_donasi">Verifikasi Pengajuan Donasi</string>
    <string name="pengajuan_kandidat_kerja">Pengajuan Kandidat Kerja</string>
    <string name="pengajuan_lowongan_kerja">Pengajuan Lowongan Kerja</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="domisili">Domisili</string>
    <string name="no_telepon">No Telepon</string>
    <string name="upload_curriculum_vitae">Upload Curriculum Vitae</string>
    <string name="upload">Upload</string>
    <string name="pendidikan_terkahir">Pendidikan Terkahir &amp; Jurusan</string>
    <string name="logo_perusahaan_thumbnail">Logo Instansi/Thumbnail</string>
    <string name="nama_instansi">Nama Instansi</string>
    <string name="target_kandidat">Target Kandidat</string>
    <string name="tipe_pekerjaan">Tipe Pekerjaan</string>
    <string name="gaji">Gaji</string>
</resources>
