<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.RegistUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/usernameregist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_margin="12dp"/>
    <EditText
        android:id="@+id/emailregist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_margin="12dp"/>
    <EditText
        android:id="@+id/pwregist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="12dp"/>
    <EditText
        android:id="@+id/pwcregist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_margin="12dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true"
        app:cardBackgroundColor="#23C1ED">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:padding="6dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="20sp"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>