<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00CCB0"
    tools:context=".verification.SignUpActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:background="@drawable/rectangle"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_centerHorizontal="true"
        android:textColor="#00CCB0"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginBottom="28dp"
        android:layout_above="@id/usersign"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/usersign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:textColorHint="#C4C4C4"
        android:fontFamily="@font/poppins_regular"
        android:layout_margin="12dp"
        android:layout_above="@id/mailsign"/>
    <EditText
        android:id="@+id/mailsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:textColorHint="#C4C4C4"
        android:layout_margin="12dp"
        android:layout_above="@id/pwsign"/>
    <EditText
        android:id="@+id/pwsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:textColorHint="#C4C4C4"
        android:layout_margin="12dp"
        android:layout_above="@id/cpwsign"/>
    <EditText
        android:id="@+id/cpwsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="#C4C4C4"
        android:layout_margin="12dp"
        android:layout_above="@id/btnsignup"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00CCB0"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:padding="10dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"/>

    </androidx.cardview.widget.CardView>
</RelativeLayout>