<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".donasi.FormDonasi2Activity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rectangle_bgtitle"/>

    <View
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/indicators2"
        android:layout_below="@id/view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengajuan_donasi_baru"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/poppins_semibold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/txlocate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domisili_pendonasian"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="40sp"
        android:layout_marginStart="20sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_below="@id/view"/>
    <ImageButton
        android:id="@+id/imgtlocate_donasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_place_black_24dp"
        android:background="@android:color/transparent"
        android:layout_below="@id/txlocate"/>
    <View
        android:id="@+id/linelocate"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        style="@style/MarginFormEdittext"
        android:layout_below="@id/imgtlocate_donasi"/>
    <TextView
        android:id="@+id/txdonasian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bentuk_donasi"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="40sp"
        android:layout_marginStart="20sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_below="@id/linelocate"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@id/txdonasian">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kirim_barang"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_regular"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_uang"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_regular"/>
    </RadioGroup>
</RelativeLayout>