<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00CCB0"
    tools:context=".verification.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/rectangle"
        android:layout_alignParentBottom="true"/>


    <EditText
        android:id="@+id/maillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_or_email"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="#C4C4C4"
        android:layout_margin="12dp"
        android:layout_above="@id/pwlogin"/>
    <EditText
        android:id="@+id/pwlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/rectangle_edittext"
        android:padding="10dp"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="#C4C4C4"
        android:layout_margin="12dp"
        android:layout_above="@id/txforgot"/>
    <TextView
        android:id="@+id/txforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_above="@id/btnlogin"
        android:fontFamily="@font/poppins_medium"
        android:layout_margin="12dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00CCB0"
        app:cardCornerRadius="15dp"
        android:layout_margin="12dp"
        android:layout_above="@id/btnsignin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins_semibold"
            android:layout_gravity="center_horizontal"/>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00CCB0"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

    </androidx.cardview.widget.CardView>
</RelativeLayout>