<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/icperson"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_person_white"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_black_24dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="20dp"/>
            <TextView
                android:id="@+id/userProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#000000"
                android:layout_marginTop="20sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/icperson"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/phoneProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_62_85766689697"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/userProfile"
                app:layout_constraintStart_toEndOf="@id/icperson"/>
            <TextView
                android:id="@+id/mailProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_gmail_com"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/phoneProfile"
                app:layout_constraintStart_toEndOf="@id/icperson"/>

            <TextView
                android:id="@+id/aktivitassaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aktivitas_saya"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@id/mailProfile"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/belajarProfile"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_learn_white"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/aktivitassaya"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belajar"
                android:textSize="16sp"
                android:textColor="#000000"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/belajarProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/donasiProfile"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_donate_white"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/aktivitassaya"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/belajarProfile"/>
            <TextView
                android:id="@+id/txdonasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donasi"
                android:textSize="16sp"
                android:textColor="#000000"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/donasiProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/belajarProfile"/>

            <ImageView
                android:id="@+id/kerjaProfile"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_work_white"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/aktivitassaya"
                app:layout_constraintStart_toEndOf="@id/belajarProfile"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kerja"
                android:textSize="16sp"
                android:textColor="#000000"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/belajarProfile"
                app:layout_constraintStart_toEndOf="@id/belajarProfile"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/setakun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengaturan_akun"
                android:textSize="20sp"
                android:textColor="#000000"
                style="@style/MarginForm"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@id/txdonasi"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/txinvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undang_teman"
                android:textSize="18sp"
                android:textColor="#000000"
                android:drawableStart="@drawable/ic_invite"
                android:drawablePadding="8dp"
                style="@style/MarginForm"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/setakun"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/lineinvite"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                style="@style/MarginFormEdittext"
                app:layout_constraintTop_toBottomOf="@id/txinvite"/>
            <TextView
                android:id="@+id/txtranslate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilih_bahasa"
                android:textSize="18sp"
                android:textColor="#000000"
                android:drawableStart="@drawable/ic_translate"
                android:drawablePadding="8dp"
                style="@style/MarginForm"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/lineinvite"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/linetranslate"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                style="@style/MarginFormEdittext"
                app:layout_constraintTop_toBottomOf="@id/txtranslate"/>
            <TextView
                android:id="@+id/txhelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bantuan"
                android:textSize="18sp"
                android:textColor="#000000"
                android:drawableStart="@drawable/ic_help_black_24dp"
                android:drawablePadding="8dp"
                style="@style/MarginForm"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/linetranslate"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/linehelp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                style="@style/MarginFormEdittext"
                app:layout_constraintTop_toBottomOf="@id/txhelp"/>
            <TextView
                android:id="@+id/infolain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informasi_lainnya"
                android:textSize="20sp"
                android:textColor="#000000"
                style="@style/MarginForm"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintTop_toBottomOf="@id/linehelp"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/txprivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kebijakan_privasi"
                android:textSize="18sp"
                android:textColor="#000000"
                android:drawableStart="@drawable/ic_privacy"
                android:drawablePadding="8dp"
                style="@style/MarginForm"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/infolain"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/lineprivacy"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                style="@style/MarginFormEdittext"
                app:layout_constraintTop_toBottomOf="@id/txprivacy"/>
            <TextView
                android:id="@+id/txservice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ketentuan_layanan"
                android:textSize="18sp"
                android:textColor="#000000"
                android:drawableStart="@drawable/ic_services"
                android:drawablePadding="8dp"
                style="@style/MarginForm"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/lineprivacy"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/lineservice"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                style="@style/MarginFormEdittext"
                app:layout_constraintTop_toBottomOf="@id/txservice"/>
            <TextView
                android:id="@+id/txgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beri_kami_nilai"
                android:textSize="18sp"
                android:textColor="#000000"
                android:drawableStart="@drawable/ic_grade"
                android:drawablePadding="8dp"
                style="@style/MarginForm"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@id/lineservice"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/linegrade"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                style="@style/MarginFormEdittext"
                app:layout_constraintTop_toBottomOf="@id/txgrade"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#00CCB0"
                app:cardCornerRadius="15dp"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/linegrade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_gravity="center_horizontal"/>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>