<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kerja.KerjaActivity">

    <EditText
        android:id="@+id/searchkerja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/search"
        android:fontFamily="@font/poppins_regular"
        android:drawableEnd="@drawable/ic_search_black_24dp"
        android:background="@drawable/rectangle_search"
        android:padding="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/lowongan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/searchkerja">
            <TextView
                android:id="@+id/txlowongan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowongan"
                style="@style/PaddingButtonCard"
                android:textColor="#00BBC0"
                android:fontFamily="@font/poppins_medium"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/kandidat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/lowongan"
            android:layout_below="@id/searchkerja">
            <TextView
                android:id="@+id/txkandidat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kandidat"
                style="@style/PaddingButtonCard"
                android:textColor="#00BBC0"
                android:fontFamily="@font/poppins_medium"/>
        </androidx.cardview.widget.CardView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpagekerja"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lowongan"/>
    </RelativeLayout>
